# context-mill

./: .gitignore  .posthog-audit-checks.json  .semgrepignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  node_modules  orchestrator-ci-plan.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS
.github/workflows/: build-release.yml  build.yml  e2e.yml  integration.yml  playwright.yml  security.yml  sync-docs-skills.yml  wizard-ci-trigger.yml
basics/android/: README.md  local.properties  local.properties.example  settings.gradle.kts
basics/angular/: .env.example  .gitignore  README.md  angular.json  package.json  pnpm-lock.yaml  proxy.conf.json  tsconfig.app.json  tsconfig.json  tsconfig.server.json
basics/aspnetcore/: .env.example  PostHogAspNetCoreExample.csproj  Program.cs  README.md
context/: cli-manifest.schema.json  commandments.yaml  docs.yaml  marketplace.yaml  skip-patterns.yaml
docs/: cloudflare-workers.md
example-apps/rust/: .env.example  Cargo.toml  README.md
example-apps/rust/src/: main.rs
llm-prompts/: README.md
mcp-commands/: posthog-setup.json
scripts/: build-docs-skills.js  build-examples-mcp-resources.js  build-skills.js  build.js  compare-dist.js  dev-server.js  lint-env-naming.sh  scan-prompt-injection.sh  scan-warlock.js  verify-release-assets.js  visual-dags.js
transformation-config/: bundles.yaml  cli-manifest.schema.json  commandments.yaml  docs.yaml  llm-analytics-skill-description.md  marketplace.yaml  skill-description.md  skills.yaml  skip-patterns.yaml  uri-schema.yaml
(+1414 files in other folders)
